[gd_scene load_steps=8 format=3 uid="uid://uto00la126yb"]

[ext_resource type="Script" path="res://tempt/tempt_enemy.gd" id="1_cuhjr"]
[ext_resource type="PackedScene" uid="uid://dq80nepbsb14r" path="res://game_object/portal/portalTo4.tscn" id="2_f1ah5"]
[ext_resource type="Texture2D" uid="uid://7lw671rwba8w" path="res://game_object/Enemy/green_body_circle.png" id="2_nwa31"]
[ext_resource type="PackedScene" uid="uid://dbixjbkms6yi5" path="res://scene/component/combine_componet.tscn" id="4_0j2cm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_edyfi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_exfs2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_t45km"]

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_cuhjr")
portal = ExtResource("2_f1ah5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_nwa31")

[node name="TouchArea2D" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 150
collision_mask = 4

[node name="TouchCollision" type="CollisionShape2D" parent="TouchArea2D"]
unique_name_in_owner = true
scale = Vector2(8.43021, 8.43021)
shape = SubResource("CircleShape2D_edyfi")

[node name="AviodArea2D" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 8

[node name="AviodCollision" type="CollisionShape2D" parent="AviodArea2D"]
unique_name_in_owner = true
scale = Vector2(34.1575, 34.1575)
shape = SubResource("CircleShape2D_exfs2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
scale = Vector2(5.71776, 5.71776)
shape = SubResource("CircleShape2D_t45km")

[node name="CombineComponet" parent="." node_paths=PackedStringArray("touch_area") instance=ExtResource("4_0j2cm")]
touch_area = NodePath("../TouchArea2D")
